--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test" : "cucumber-js test --require steps/*.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wroomkchau/atm-advanced.git"
