--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test" : "cucumber-js test --require steps/*.js"
+    "test": "cucumber-js test --require steps/*.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/wroomkchau/atm-advanced#readme",
   "devDependencies": {
-    "@playwright/test": "^1.32.3"
+    "@playwright/test": "^1.32.3",
+    "eslint-plugin-playwright": "^0.12.0"
   },
   "dependencies": {
-    "@cucumber/cucumber": "^9.1.0"
+    "@cucumber/cucumber": "^9.1.0",
+    "winston": "^3.8.2",
+    "xray-formatter": "^2.1.5"
   }
 }
