--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cucumber-js test --require steps/*.js -f xray-formatter"
+    "test": "cucumber-js --config cucumber.js",
+    "rp-test": "cucumber-js --config cucumber.js -f ./support/reportPortalFormatter.js"
   },
   "repository": {
     "type": "git",
@@ -19,10 +20,12 @@
   "homepage": "https://github.com/wroomkchau/atm-advanced#readme",
   "devDependencies": {
     "@playwright/test": "^1.32.3",
+    "cucumber-junit-reporter": "^0.0.1",
     "eslint-plugin-playwright": "^0.12.0"
   },
   "dependencies": {
     "@cucumber/cucumber": "^9.1.0",
+    "@reportportal/agent-js-cucumber": "^5.2.1",
     "winston": "^3.8.2",
     "xray-formatter": "^2.1.5"
   }
