--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "cucumber-js --config cucumber.js",
-    "rp-test": "cucumber-js --config cucumber.js -f ./support/reportPortalFormatter.js"
+    "rp-test": "cucumber-js --config cucumber.js -f ./support/reportPortalFormatter.js",
+    "jest": "jest --config jest.config.js"
   },
   "repository": {
     "type": "git",
@@ -21,11 +22,13 @@
   "devDependencies": {
     "@playwright/test": "^1.32.3",
     "cucumber-junit-reporter": "^0.0.1",
-    "eslint-plugin-playwright": "^0.12.0"
+    "eslint-plugin-playwright": "^0.12.0",
+    "jest": "^29.5.0"
   },
   "dependencies": {
     "@cucumber/cucumber": "^9.1.0",
     "@reportportal/agent-js-cucumber": "^5.2.1",
+    "jest-silent-reporter": "^0.5.0",
     "winston": "^3.8.2",
     "xray-formatter": "^2.1.5"
   }
