--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@playwright/test": "^1.32.3",
     "cucumber-junit-reporter": "^0.0.1",
     "eslint-plugin-playwright": "^0.12.0",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "jest-puppeteer": "^8.0.6"
   },
   "dependencies": {
     "@cucumber/cucumber": "^9.1.0",
